--- a/views/patient.ejs
+++ b/views/patient.ejs
@@ -146,6 +146,16 @@
             Add Guest Payment
           </button>
         </form>
+        <form action="/patient-details/check-payment">
+          <button type="submit" class="mt-10 btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg"
+              width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+              <path
+                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+            </svg>
+            Check Payment
+          </button>
+        </form>
       </div>
     </div>
     <div id="AddPatient" style="margin-top:25px">
