--- a/views/token-generation.ejs
+++ b/views/token-generation.ejs
@@ -16,7 +16,6 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script> -->
-	<!-- <script src="static/JSPrintManager.js"></script> -->
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.5/bluebird.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> -->
 </head>
@@ -38,40 +37,205 @@
 			</div>
 		</div>
 		<br><br>
-		<div class="input-group mb-3" style="margin-left: 14%;margin-top: 50px;">
-			<span class="input-group-text" id="basic-addon1">Enter Patient Name</span>
-			<input type="text" class="form-control" id="PatientNameInput" style="max-width: 500px;">
-			<select class="form-select" id="PatientTypeSelect" style="max-width: 130px;">
-				<option selected>Select Type</option>
-				<option value="Male">Male</option>
-				<option value="Female">Female</option>
-				<option value="Child">Child</option>
-			</select>
-			<button class="btn btn-outline-primary" type="button" id="PatientNamePrint" onclick="print();">
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer"
-					viewBox="0 0 16 16">
-					<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
-					<path
-						d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
-				</svg> Print Token
-			</button>
+		<div class="d-flex justify-content-between" style="margin-top: 50px;">
+			<div style="margin-right: 20px;max-width: 50%;max-height: 30px;">
+				<form method="post">
+					<div class="input-group mb-3">
+						<span class="input-group-text" id="basic-addon1">Enter Patient Name</span>
+						<input type="text" class="form-control" id="PatientNameInput" name="TokenName" style="max-width: 500px;">
+						<select class="form-select" id="PatientTypeSelect" name="TokenType" style="max-width: 130px;">
+							<option selected>Select Type</option>
+							<option value="Male">Male</option>
+							<option value="Female">Female</option>
+							<option value="Child">Child</option>
+						</select>
+						<button class="btn btn-outline-primary" type="submit" id="PatientNamePrint">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer"
+								viewBox="0 0 16 16">
+								<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
+								<path
+									d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
+							</svg> Print Token
+						</button>
+					</div>
+				</form>
+			</div>
+			<div class="vr"></div>
+			<div style="margin-left: 20px;max-width: 50%;">
+				<form>
+					<div class="input-group mb-3" style="max-height: 30px;">
+						<span class="input-group-text" id="basic-addon1">Search for patient</span>
+						<input type="text" class="form-control" id="searchkeyword" name="searchkeyword" style="max-width: 500px;">
+						<button class="btn btn-outline-primary" type="submit" id="SearchPatientBtn">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+							</svg> Search
+						</button>
+					</div>
+					<div class="d-flex justify-content-between">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="searchoption" id="CaseNoRadio" value="CaseNo" checked>
+							<label class="form-check-label" for="CaseNoRadio">
+								Case Number
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="searchoption" id="MobileNumRadio" value="MobileNum">
+							<label class="form-check-label" for="MobileNumRadio">
+								Mobile Number
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="searchoption" id="NameRadio" value="Name">
+							<label class="form-check-label" for="NameRadio">
+								Patient Name
+							</label>
+						</div>
+					</div>
+				</form>
+				<% if(searchResult != undefined) {%>
+          <% if (searchResult.length > 0) { %>
+            <!-- <div class="accordion" id="SearchFilters">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Filters
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    set filters here...
+                  </div>
+                </div>
+              </div>
+            </div> -->
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Case No.</th>
+                  <th scope="col">Patient Name</th>
+                  <th scope="col">Mobile Number</th>
+                  <th scope="col">First Visit</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                  <% for ( let i = 0;i < searchResult.length;i++) { %>
+                    <% var date = searchResult[i].FirstVisit; %>
+                    <% date = String(date.getDate()).padStart(2, '0') + "-" + String(date.getMonth() + 1).padStart(2, '0') + "-" + date.getFullYear(); %> 
+                    <tr>
+											<th scope="row"><%= i+1 %> </th>
+											<td><%= searchResult[i].CaseNo %></td>
+											<td><%= searchResult[i].PatientName %></td>
+											<td><%= searchResult[i].PhoneNumber %></td>
+											<td><%= date %></td>
+											<td><%= searchResult[i].Status %></td>
+											<td>
+												<form method="post">
+													<button class="btn btn-primary" type="submit" name="TokenPatientID" value="<%= searchResult[i].PatientID %>" >Select</button>
+												</form>
+											</td>
+                    </tr>
+                  <% } %>
+              </tbody>
+            </table>
+          <% } else { %>
+            <div class="alert alert-danger" role="alert">
+              No Results Found
+            </div>
+          <% } %>
+        <% } %>
+			</div>
 		</div>
 		<hr style="margin-top: 30px;">
 		<div class="d-flex justify-content-between">
 			<div class="form-group">
-				<label for="MaleTokenList">Male</label>
-				<textarea class="form-control" id="MaleTokenList" rows="10"
-					style="width: 300px;font-size: 16px;background-color: white;"><% for(let i=0;i<MaleDetails.length;i+=1) { %><%= MaleDetails[i].TokenNumber + " - " + MaleDetails[i].PatientName + "\n" %><% } %></textarea>
+				<label for="MaleTokenList" style="font-size:x-large;font-weight: bold;">Male</label>
+				<table class="table" id="MaleTokenList" style="max-width: 400px;min-width: 250px;">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Name</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(let i=0;i<MaleDetails.length;i+=1) { %>
+							<tr>
+								<td><%= MaleDetails[i].TokenNumber %></td>
+								<td><%= MaleDetails[i].PatientName %></td>
+								<td>
+									<form method="post">
+										<button type="submit" class="btn nav-link" name="ReprintToken" value="M<%= MaleDetails[i].TokenNumber %>">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer" viewBox="0 0 16 16">
+												<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"/>
+												<path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"/>
+											</svg>
+										</button>
+									</form>
+								</td>
+							</tr>
+						<% } %>
+					</tbody>
+				</table>
 			</div>
 			<div class="form-group">
-				<label for="FemaleTokenList">Female</label>
-				<textarea class="form-control" id="FemaleTokenList" rows="10"
-					style="width: 300px;font-size: 16px;background-color: white;" readonly><% for(let i=0;i<FemaleDetails.length;i+=1) { %><%= FemaleDetails[i].TokenNumber + " - " + FemaleDetails[i].PatientName + "\n" %><% } %></textarea>
+				<label for="FemaleTokenList" style="font-size:x-large;font-weight: bold;">Female</label>
+				<table class="table" id="FemaleTokenList" style="max-width: 400px;min-width: 250px;">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Name</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(let i=0;i<FemaleDetails.length;i+=1) { %>
+							<tr>
+								<td><%= FemaleDetails[i].TokenNumber %></td>
+								<td><%= FemaleDetails[i].PatientName %></td>
+								<td>
+									<form method="post">
+										<button type="submit" class="btn nav-link" name="ReprintToken" value="F<%= FemaleDetails[i].TokenNumber %>">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer" viewBox="0 0 16 16">
+												<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"/>
+												<path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"/>
+											</svg>
+										</button>
+									</form>
+								</td>
+							</tr>
+						<% } %>
+					</tbody>
+				</table>
 			</div>
 			<div class="form-group">
-				<label for="ChildTokenList">Child</label>
-				<textarea class="form-control" id="ChildTokenList" rows="10"
-					style="width: 300px;font-size: 16px;background-color: white;" readonly><% for(let i=0;i<ChildDetails.length;i+=1) { %><%= ChildDetails[i].TokenNumber + " - " + ChildDetails[i].PatientName + "\n" %><% } %></textarea>
+				<label for="ChildTokenList" style="font-size:x-large;font-weight: bold;">Child</label>
+				<table class="table" id="ChildTokenList" style="max-width: 400px;min-width: 250px;">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Name</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(let i=0;i<ChildDetails.length;i+=1) { %>
+							<tr>
+								<td><%= ChildDetails[i].TokenNumber %></td>
+								<td><%= ChildDetails[i].PatientName %></td>
+								<td>
+									<form method="post">
+										<button type="submit" class="btn nav-link" name="ReprintToken" value="C<%= ChildDetails[i].TokenNumber %>">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer" viewBox="0 0 16 16">
+												<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"/>
+												<path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z"/>
+											</svg>
+										</button>
+									</form>
+								</td>
+							</tr>
+						<% } %>
+					</tbody>
+				</table>
 			</div>
 		</div>
 		<script>
